@@ -5,13 +5,23 @@ import androidx.compose.foundation.layout.BoxWithConstraints
 import androidx.compose.foundation.layout.Column
 import androidx.compose.foundation.layout.ColumnScope
 import androidx.compose.foundation.layout.Row
-import androidx.compose.material.Text
+import androidx.compose.foundation.layout.RowScope
 import androidx.compose.runtime.Composable
 import androidx.compose.ui.Alignment
 import androidx.compose.ui.Modifier
 
-//class OrientationWeight
-//class Orientation
+
+/**
+ * Doesn't work, am unable to pass the scope of the modifier at runtime
+ */
+fun Modifier.adaptiveWeight(float: Float, fill: Boolean = true): Modifier {
+    println(this)
+    return when (this) {
+        is ColumnScope -> Modifier.weight(float, fill)
+        is RowScope -> Modifier.weight(float, fill)
+        else -> this
+    }
+}
 
 /**
  * UI element that will display as a column in portrait mode, and as row in landscape
@@ -21,17 +31,22 @@ fun AdaptiveColumn(
     modifier: Modifier = Modifier,
     verticalArrangement: Arrangement.Vertical = Arrangement.Top,
     horizontalAlignment: Alignment.Horizontal = Alignment.Start,
-    content: @Composable() (ColumnScope.() -> Unit)
+    content: @Composable() (() -> Unit)
 ) {
     return BoxWithConstraints {
         val portrait: Boolean = this.maxHeight >= this.maxWidth
         when (portrait) {
-            true -> Column(modifier, verticalArrangement, horizontalAlignment, content)
+            true -> Column(
+                modifier,
+                verticalArrangement,
+                horizontalAlignment
+            ) { this.apply { content() } }
+
             false -> Row(
                 modifier,
                 verticalArrangement.flip(),
                 horizontalAlignment.flip()
-            ) { Text("Test") }
+            ) { content() }
         }
     }
 }
