@@ -2,6 +2,7 @@ Linter rules:
 -No hardcoded strings
 -data layer shouldn't use '@Composable' annotation
 -presentation should never import from data layer unless in ViewModel
+-No unused imports
 
 Get rid of hardcoded strings
 Set dark theme colours, move theme colours to their own files
